# numrs

./: .gitignore  LICENSE  README.md
bindings/numrs-c/: Cargo.toml  DOCS.md  build.rs  cbindgen.toml
bindings/numrs-c/docs/: 00_numrs_ops.md  01_numrs_arrays.md  02_numrs_tensors_dl.md  03_1_numrs_optimizers.md  03_timeseries_forecasting.md  04_onnx_export.md  05_onnx_inference.md  06_hands_on.md
bindings/numrs-c/examples/: Makefile  benchmark_arrayview.c  benchmark_c_api.rs  compare_performance.rs  fraud_detection.c  simple_ops.c
bindings/numrs-c/include/: numrs.h
bindings/numrs-c/src/: array.rs  lib.rs  nn.rs  tensor.rs  train.rs
bindings/numrs-c/src/ops/: mod.rs  onnx.rs
bindings/numrs-c/src/optim/: adam.rs  mod.rs
bindings/numrs-c/tests/: benchmark.rs
bindings/numrs-js/: .npmignore  Cargo.toml  DOCS.md  README.md  index.d.ts  jest.config.cjs  package-lock.json  package.json  tsconfig.json
bindings/numrs-js/.cargo/: config.toml
bindings/numrs-js/__tests__/: api.test.ts  perf.test.ts
bindings/numrs-js/docs/: 00_numrs_ops.md  01_numrs_arrays.md  02_numrs_tensors_dl.md  03_1_numrs_optimizers.md  03_timeseries_forecasting.md  04_onnx_export.md  05_onnx_inference.md  06_hands_on.md
bindings/numrs-js/examples/: agnostic_demo.ts  api_demo.js  autograd_demo.js  end_to_end.ts  fraud_detection.js  fraud_detection.ts  measure_perf.ts  time_series.ts  verify_new_bindings.ts  verify_ops.js  verify_ops.ts  verify_trainer.js
bindings/numrs-js/scripts/: install-native.js  postbuild.js
bindings/numrs-js/src/: array.rs  lib.rs  nn.rs  onnx.rs  tensor.rs  train.rs  zero_copy.rs
bindings/numrs-js/src/ops/: mod.rs
bindings/numrs-js/src/optim/: adam.rs  mod.rs  others.rs  rms.rs  sgd.rs
bindings/numrs-js/ts/: index.ts  native_loader.ts
bindings/numrs-js/ts/array/: index.ts
bindings/numrs-js/ts/autograd/: index.ts
bindings/numrs-js/ts/data/: dataset.ts
bindings/numrs-js/ts/ops/: index.ts
bindings/numrs-wasm/: .npmignore  Cargo.toml  DOCS.md  README.md  dispatcher.js  package-lock.json  package.json  wasm-init.js  webgpu-runtime.js
bindings/numrs-wasm/docs/: 00_numrs_ops.md  01_numrs_arrays.md  02_numrs_tensors_dl.md  03_1_numrs_optimizers.md  03_timeseries_forecasting.md  04_onnx_export.md  05_onnx_inference.md  06_hands_on.md
bindings/numrs-wasm/examples/console/: index.html  index.js
bindings/numrs-wasm/examples/fraud_detection/: index.html  index.js
bindings/numrs-wasm/src/: gpu_ops.rs  lib.rs  memory.rs  nn.rs  onnx.rs  tensor.rs  train.rs
numrs-core/: BENCHMARK_Apple_M3_Max_Apple_M3.md  Cargo.toml  DOCS.md  build.rs
numrs-core/.cargo/: config.toml
numrs-core/benches/: matmul_bench.rs  ops_bench.rs  promotion_bench.rs
numrs-core/docs/: 00_numrs_ops.md  01_numrs_arrays.md  02_numrs_tensors_dl.md  03_1_numrs_optimizers.md  03_timeseries_forecasting.md  04_onnx_export.md  05_onnx_inference.md  06_hands_on.md
numrs-core/examples/: ONNX_EXAMPLES_README.md  README.md  analyze_overhead.rs  autograd_demo.rs  axis_reduction_demo.rs  benchmark_comparison.py  compare_optimizers.rs  debug_convergence.rs  dispatch_demo.rs  dtype_demo.rs  end_to_end_demo.rs  end_to_end_onnx_complex.rs  end_to_end_onnx_complex_import.rs  end_to_end_onnx_create.rs  end_to_end_onnx_use.rs  fraud_detection.rs  matmul_perf_analysis.rs  ml_benchmark.rs  ml_demo.rs  onnx_model_demo.rs  onnx_numrs_integration.rs  ops_validation.rs  optimizers_demo.rs  profile_training.rs  temperature_model.rs  test_adaptive.rs  test_broadcasting.rs  test_gradients_minimal.rs  test_integer_dtypes.rs  test_linalg.rs  test_linear.rs  test_matmul.rs  test_matmul_dtypes.rs  test_matmul_opt.rs  test_relu_gradients.rs  test_transpose.rs  test_transpose_opt.rs  test_xor_variants.rs  timeseries_cnn.rs  timeseries_cnn_inference.rs  (+9 more)
numrs-core/src/: array_view.rs  lib.rs  ops_inplace.rs  startup.rs
numrs-core/src/array/: README.md  array.rs  dtype.rs  dyn_array.rs  mod.rs  ops_traits.rs  promotion.rs
numrs-core/src/autograd/: README.md  backward.rs  mod.rs  nn.rs  ops.rs  tensor.rs  train.rs
numrs-core/src/autograd/optim/: README.md  adabound.rs  adadelta.rs  adagrad.rs  adam.rs  adamw.rs  base.rs  lamb.rs  lbfgs.rs  lookahead.rs  mod.rs  nadam.rs  radam.rs  rmsprop.rs  rprop.rs  schedulers.rs  sgd.rs
numrs-core/src/backend/: README.md  capabilities.rs  dispatch.rs  heuristics.rs  microbench.rs  mod.rs
numrs-core/src/backend/blas/: README.md  mod.rs
numrs-core/src/backend/cpu/: README.md  batchnorm.rs  conv.rs  dropout.rs  mod.rs  parallel.rs  random.rs  scalar.rs  simd.rs  simd_conv.rs
numrs-core/src/backend/cuda/: mod.rs
numrs-core/src/backend/metal/: README.md  mod.rs
numrs-core/src/backend/webgpu/: README.md  batchnorm.rs  codegen.rs  conv.rs  dropout.rs  mod.rs
numrs-core/src/codegen/: cpu.rs  cuda.rs  metal.rs  mod.rs  webgpu.rs
numrs-core/src/ir/: graph.rs  hlo.rs  lowering.rs  mod.rs
numrs-core/src/llo/: elementwise.rs  linalg.rs  matmul.rs  mod.rs  model.rs  random.rs  reduction.rs  shape.rs  stats.rs
numrs-core/src/ops/: README.md  batchnorm.rs  conv.rs  dropout.rs  export.rs  mod.rs  model.rs  promotion_wrappers.rs
numrs-core/src/ops/elementwise/: README.md
numrs-core/src/ops/linalg/: README.md  dot.rs  matmul.rs  mod.rs
numrs-core/src/ops/reduction/: README.md  argmax.rs  max.rs  mean.rs  min.rs  mod.rs  sum.rs  variance.rs
numrs-core/tests/: array_broadcasting.rs  array_generic.rs  array_implicit_conversion.rs  array_manipulation.rs  autograd_activations.rs  autograd_basic.rs  autograd_loss.rs  autograd_matmul.rs  autograd_reduction.rs  backend_dispatch_explicit.rs  backend_parallel.rs  backend_scalar.rs  backend_simd.rs  dispatch_system.rs  dtype_basic.rs  dtype_dispatch_generic.rs  heuristics.rs  ir_codegen_basic.rs  kernel_selection.rs  matmul_blas_backend.rs  microbench_execution.rs  nn_layers.rs  ops_elementwise.rs  ops_math.rs  ops_new_ops.rs  ops_reduction_complex.rs  print_backend_selection.rs  print_selected_methods.rs  runtime_blas_preference.rs  startup_log.rs  static_blas_linking.rs  type_promotion.rs
numrs-core/tests/autograd/: main.rs
(+128 files in other folders)
