[package]
name = "numrs-wasm"
version = "0.1.0"
edition = "2021"
authors = ["numrs contributors"]
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"  # Siempre activado para debugging
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
# wee_alloc = "0.4.5"  # Allocator eficiente para WASM
# CPU-only build: disable BLAS and GPU backends for WASM
# WebGPU requires async JS coordination which is not yet implemented
numrs = { package = "numrs-core", path = "../../numrs-core", default-features = false, features = ["disabled-blas"] }
anyhow = "1.0"


[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Navigator",
    "Performance",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimizaci칩n agresiva para WASM
opt-level = "z"      # Optimizar para tama침o (usa menos memoria)
lto = true           # Link-time optimization
codegen-units = 1    # Mejor optimizaci칩n cross-crate
panic = "abort"      # Reduce tama침o del binario
strip = true         # Remove debug symbols

# Habilitar SIMD128, atomics, bulk-memory, threads
# NOTA: Los link-args de memoria se pasan via RUSTFLAGS en npm scripts
# [target.'cfg(target_arch = "wasm32")']
# rustflags = ["-C", "target-feature=+simd128,+atomics,+bulk-memory"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
